Update web .html

--- a/web .html
+++ b/web .html
@@ -9,6 +9,11 @@
     <h2>why html for companies</h>
     <p>Web development and design help to promote a company's brand name. Essentially, if a firm's website is accessible via the World Wide Web, the company is considered operating on a worldwide scale. This means that a little-known company may be looked for, and its items can be delivered to clients who are far away.
     </p>
+     <li class="current"><a href="index.html">Home</a></li>
+        <li><a href="about.html">about</a></li>
+        <li><a href="web.html">web</a></li>
+        <li><a href="Css.html">Css</a></li>
+    
    
 </body>
 </html>
