--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
     </style>
     <li class="current"><a href="index.html">Home</a></li>
         <li><a href="about.html">about</a></li>
-        <li><a href="blog.html">blog</a></li>
-        <li><a href="gallery.html">gallery</a></li>
+        <li><a href="Css.html">Css</a></li>
+        <li><a href=".html"></a></li>
         
         for iquiries please type you message below and press submite
         <form action="sample-page-handler.html">
